--- a/index.html
+++ b/index.html
@@ -10,7 +10,57 @@
 </head>
 
 <body>
-<h1>hockeys</h1>
+
+    <header>
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer class="footer p-10 bg-base-200 text-base-content bg-[#131318] text-white">
+        <aside>
+            <h3 class="text-2xl">Get In Touch</h3>
+            <p>Dit amet consectetur. Condimentum <br> adipiscing aliquam turpis placerat dolor. Purus <br> urna in sit
+                nullam proin.</p>
+                <aside class="flex flex-row gap-5">
+                    <img class="w-[24px] h-[24px]" src="Images/Group 1171275318.png" alt="" width="[30px]">
+                    <p>hockeys@support.com</p>
+                </aside>
+                <aside class="flex flex-row gap-5" >
+                    <img class="w-[24px] h-[24px]" src="Images/Group 1171275317.png" alt="">
+                    <p>(+62) 123-321-543</p>
+                </aside> 
+        </aside>
+        <p></p>
+
+            <nav>
+                <header class="text-lg text-white">Company</header>
+                <a class="link link-hover decoration-3 indent-2.5">About us</a>
+                <a class="link link-hover decoration-3 indent-2.5">Leadership</a>
+                <a class="link link-hover decoration-3 indent-2.5">Careers</a>
+                <a class="link link-hover decoration-3 indent-2.5">News & Article</a>
+                <a class="link link-hover decoration-3 indent-2.5">Legal Notice</a>
+            </nav>
+            <nav class="sm:flex-row-0">
+                <header class="text-lg text-white">Support</header>
+                <a class="link link-hover decoration-3 indent-2.5">Help Center</a>
+                <a class="link link-hover decoration-3 indent-2.5">FAQ</a>
+                <a class="link link-hover decoration-3 indent-2.5">Ticket Suppor</a>
+                <a class="link link-hover decoration-3 indent-2.5">Contact Us</a>
+            </nav>
+
+        <nav class="sm: place-items-center ">
+            <header class="text-lg text-white">Services</header>
+            <a class="link link-hover decoration-3 indent-2.5">Academy</a>
+            <a class="link link-hover decoration-3 indent-2.5">Group Lesson</a>
+            <a class="link link-hover decoration-3 indent-2.5">Private Lesson</a>
+            <a class="link link-hover decoration-3 indent-2.5">Hockeys for kids</a>
+            <a class="link link-hover decoration-3 indent-2.5">Hockeys for Adult</a>
+        </nav>
+    </footer>
+
 </body>
 
 </html>
