--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
                     </ul>
                 </div>
                 <a class="btn btn-ghost">
-                    <span className="text-[#121218]">Hockey</span>
-                    <span className="text-[#ff4240]">’</span>
-                    <span className="text-[#121218]">s</span>
+                    <span class="text-[#121218]">Hockey</span>
+                    <span class="text-[#ff4240]">’</span>
+                    <span class="text-[#121218]">s</span>
                 </a>
               
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1">
-                    <li><a>Home</a></li>
+                    <li><a> <span class="text-[#ff4240]">Home</span></a></li>
                     <li><a>About</a></li>
                     <li><a>Pages</a></li>
                     <li><a>Blog</a></li>
@@ -56,8 +56,8 @@
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
                       </button>
                 </div>
-                <div class="navbar-end">
-                    <a class="btn">Get Ticket</a>
+                <div class="navbar-end ">
+                    <a class="btn bg-[#FF4240]">Get Ticket</a>
                 </div>
             </div>
         </div>
